# migrate-bb-to-gh

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  sample.config.yml
src/: api.rs  bitbucket.rs  circleci.rs  config.rs  github.rs  lib.rs  main.rs  migrator.rs  spinner.rs  wizard.rs
src/circleci/: action.rs  api.rs  config.rs  migrate.rs  migrator.rs  mod.rs  wizard.rs
src/circleci/api/: mod.rs  models.rs
src/prompt/: fuzzy_select.rs  mod.rs
src/prompts/: confirm.rs  fuzzy_select.rs  input.rs  mod.rs  multi_select.rs  select.rs
src/repositories/: action.rs  migrator.rs  mod.rs  wizard.rs
