[package]
name = "migrate-bb-to-gh"
author = "Arkadiusz Żmudzin <arek@moodup.team>"
about = "Utility tool for migration of repositories from Bitbucket to GitHub for Mood Up Team"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
indicatif = "0.17.0-rc.10"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempdir = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }
