[package]
name = "migrate-bb-to-gh"
authors = ["Arkadiusz Żmudzin <arek@moodup.team, arkadiusz.zmudzin@gmail.com>"]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
base64 = "0.13.0"
clap = { version = "3.1.8", features = ["derive"] }
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
futures = "0.3.21"
indicatif = "0.17.0-rc.10"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tempdir = "0.3.7"
tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
base64 = "0.13.0"
